--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ function endTurn() {
     </head>
     <body>
         <div id="game-view">
-            <h1>Mr Marienne is a spy</h1>
+ <h1 style="color: #ffea00;">Mr Marienne is a spy!</h1>
             <div id="game-nav">
                 <div id="score">
                     <span id="redScore">RED: 0</span> | <span id="blueScore">BLUE: 0</span>
