--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 
             #score {
                 font-size: 20px;
+				color: #4bd620;
                 padding-bottom: 10px;
             }
 
@@ -215,19 +216,42 @@ shuffleArray: function (array) {
         document.getElementById("blueScore").textContent = "BLUE: " + this.blueScore;
     },
 
-    cardClicked: function(index) {
-        const card = this.cards[index];
-        if (card.selected) return;
-        card.selected = true;
-        const cardElement = document.getElementById("card" + index);
-        cardElement.classList.add(card.team + "Card");
-        cardElement.classList.add("selectedCard");
-        if (card.team === this.currentTurn) {
-            this[this.currentTurn + "Score"]++;
-            this.updateScoreDisplay();
-        } else {
-            this.toggleTurn();
+ cardClicked: function(index) {
+    const card = this.cards[index];
+    if (card.selected) return;
+    card.selected = true;
+    const cardElement = document.getElementById("card" + index);
+    cardElement.classList.add(card.team + "Card");
+    cardElement.classList.add("selectedCard");
+
+    if (this.currentTurn === "red") {
+        if (card.team === "red") {
+            this.redScore += 3;
+        } else if (card.team === "neutral") {
+            this.redScore += 1;
+        } else if (card.team === "blue") {
+            this.redScore -= 1;
+        } else if (card.team === "death") {
+            alert("L'équipe rouge a perdu!");
+            this.init();
+            return;
         }
+    } else if (this.currentTurn === "blue") {
+        if (card.team === "blue") {
+            this.blueScore += 3;
+        } else if (card.team === "neutral") {
+            this.blueScore += 1;
+        } else if (card.team === "red") {
+            this.blueScore -= 1;
+        } else if (card.team === "death") {
+            alert("L'équipe bleue a perdu!");
+            this.init();
+            return;
+        }
+    }
+
+ 
+    this.updateScoreDisplay();
     },
 
     toggleSpyMode: function() {
@@ -244,6 +268,8 @@ document.addEventListener("DOMContentLoaded", function() {
 
 function resetGame() {
     game.init();
+   let blueScore=0;
+
 }
 
 function endTurn() {
