--- a/index.html
+++ b/index.html
@@ -144,7 +144,350 @@ const game = {
     spyMode: false,
 
     init: function() {
- const words = [  "AFRICA", "AGENT", "AIR", "ALIEN", "ALPS", "AMAZON", "AMBULANCE", "AMERICA", "ANGEL", "ANTARCTICA", "APPLE", "ARM", "ATLANTIS", "AUSTRALIA", "AZTEC", "BACK", "BALL", "BAND", "BANK", "BAR", "BARK", "BAT", "BATTERY", "BEACH", "BEAR", "BEAT", "BED", "BEIJING", "BELL", "BELT", "BERLIN", "BERMUDA", "BERRY", "BILL", "BLOCK", "BOARD", "BOLT", "BOMB", "BOND", "BOOM", "BOOT", "BOTTLE", "BOW", "BOX", "BRIDGE", "BRUSH", "BUCK", "BUFFALO", "BUG", "BUGLE", "BUTTON", "CALF", "CANADA", "CAP", "CAPITAL", "CAR", "CARD", "CARROT", "CASINO", "CAST", "CAT", "CELL", "CENTAUR", "CENTER", "CHAIR", "CHANGE", "CHARGE", "CHECK", "CHEST", "CHICK", "CHINA", "CHOCOLATE", "CHURCH", "CIRCLE", "CLIFF", "CLOAK", "CLUB", "CODE", "COLD", "COMIC","COMPOUND", "CONCERT", "CONDUCTOR", "CONTRACT", "COOK", "COPPER", "COTTON", "COURT", "COVER", "CRANE", "CRASH", "CRICKET", "CROSS", "CROWN", "CYCLE", "CZECH", "DANCE", "DATE", "DAY", "DEATH", "DECK", "DEGREE", "DIAMOND", "DICE", "DINOSAUR", "DISEASE", "DOCTOR", "DOG", "DRAFT", "DRAGON", "DRESS", "DRILL", "DROP", "DUCK", "DWARF", "EAGLE", "EGYPT", "EMBASSY", "ENGINE", "ENGLAND", "EUROPE", "EYE", "FACE", "FAIR", "FALL", "FAN", "FENCE", "FIELD", "FIGHTER", "FIGURE", "FILE", "FILM", "FIRE", "FISH", "FLUTE", "FLY", "FOOT", "FORCE", "FOREST", "FORK", "FRANCE", "GAME", "GAS", "GENIUS", "GERMANY", "GHOST", "GIANT", "GLASS", "GLOVE", "GOLD", "GRACE", "GRASS", "GREECE", "GREEN", "GROUND", "HAM", "HAND", "HAWK", "HEAD", "HEART", "HELICOPTER", "HIMALAYAS", "HOLE", "HOLLYWOOD", "HONEY", "HOOD", "HOOK", "HORN", "HORSE", "HORSESHOE", "HOSPITAL", "HOTEL", "ICE", "ICE CREAM", "INDIA", "IRON", "IVORY", "JACK", "JAM", "JET", "JUPITER", "KANGAROO", "KETCHUP", "KEY", "KID", "KING", "KIWI", "KNIFE", "KNIGHT", "LAB", "LAP", "LASER", "LAWYER", "LEAD", "LEMON", "LEPRECHAUN", "LIFE", "LIGHT", "LIMOUSINE", "LINE", "LINK", "LION", "LITTER", "LOCH NESS", "LOCK", "LOG", "LONDON", "LUCK", "MAIL", "MAMMOTH", "MAPLE", "MARBLE", "MARCH", "MASS", "MATCH", "MERCURY", "MEXICO", "MICROSCOPE", "MILLIONAIRE", "MINE", "MINT", "MISSILE", "MODEL", "MOLE", "MOON", "MOSCOW", "MOUNT", "MOUSE", "MOUTH", "MUG", "NAIL", "NEEDLE", "NET", "NEW YORK", "NIGHT", "NINJA", "NOTE", "NOVEL", "NURSE", "NUT","OCTOPUS", "OIL", "OLIVE", "OLYMPUS", "OPERA", "ORANGE", "ORGAN", "PALM", "PAN", "PANTS", "PAPER", "PARACHUTE", "PARK", "PART", "PASS", "PASTE", "PENGUIN", "PHOENIX", "PIANO", "PIE", "PILOT", "PIN", "PIPE", "PIRATE", "PISTOL", "PIT", "PITCH", "PLANE", "PLASTIC", "PLATE", "PLATYPUS", "PLAY", "PLOT", "POINT", "POISON", "POLE", "POLICE", "POOL", "PORT", "POST", "POUND", "PRESS", "PRINCESS", "PUMPKIN", "PUPIL", "PYRAMID", "QUEEN", "RABBIT", "RACKET", "RAY", "REVOLUTION", "RING", "ROBIN", "ROBOT", "ROCK", "ROME", "ROOT", "ROSE", "ROULETTE", "ROUND", "ROW", "RULER", "SATELLITE", "SATURN", "SCALE", "SCHOOL", "SCIENTIST", "SCORPION", "SCREEN", "SCUBA DIVER", "SEAL", "SERVER", "SHADOW", "SHAKESPEARE", "SHARK", "SHIP", "SHOE", "SHOP", "SHOT", "SINK", "SKYSCRAPER", "SLIP", "SLUG", "SMUGGLER", "SNOW", "SNOWMAN", "SOCK", "SOLDIER", "SOUL", "SOUND", "SPACE", "SPELL", "SPIDER", "SPIKE", "SPINE", "SPOT", "SPRING", "SPY", "SQUARE", "STADIUM", "STAFF", "STAR", "STATE", "STICK", "STOCK", "STRAW", "STREAM", "STRIKE", "STRING", "SUB", "SUIT", "SUPERHERO", "SWING", "SWITCH", "TABLE", "TABLET", "TAG", "TAIL", "TAP", "TEACHER", "TELESCOPE", "TEMPLE", "THEATER", "THIEF", "THUMB", "TICK", "TIE", "TIME", "TOKYO", "TOOTH", "TORCH", "TOWER", "TRACK", "TRAIN", "TRIANGLE", "TRIP", "TRUNK", "TUBE", "TURKEY", "UNDERTAKER", "UNICORN", "VACUUM", "VAN", "VET", "WAKE", "WALL", "WAR", "WASHER", "WASHINGTON", "WATCH", "WATER", "WAVE", "WEB", "WELL", "WHALE", "WHIP", "WIND", "WITCH", "WORM", "YARD"];
+ const words = [  "Ability",
+"Apple",
+"Ball",
+"Book",
+"Cat",
+"Chair",
+"Clock",
+"Cloud",
+"Computer",
+"Cookie",
+"Cup",
+"Dog",
+"Door",
+"Egg",
+"Fish",
+"Flag",
+"Flower",
+"Foot",
+"Fruit",
+"Glass",
+"Grass",
+"Hand",
+"Hat",
+"House",
+"Ice",
+"Insect",
+"Key",
+"Lamp",
+"Leaf",
+"Light",
+"Milk",
+"Moon",
+"Mountain",
+"Music",
+"Nose",
+"Ocean",
+"Orange",
+"Pencil",
+"Phone",
+"Pizza",
+"Rain",
+"Ring",
+"Rose",
+"Shoe",
+"Sky",
+"Star",
+"Sun",
+"Table",
+"Tree",
+"Water",
+"Window",
+"Airplane",
+"Apple pie",
+"Baby",
+"Bag",
+"Banana",
+"Bed",
+"Bicycle",
+"Bird",
+"Black",
+"Blue",
+"Boat",
+"Bread",
+"Bridge",
+"Broccoli",
+"Bus",
+"Butterfly",
+"Camera",
+"Car",
+"Carrot",
+"Chair",
+"Cheese",
+"Chicken",
+"Chocolate",
+"Cinema",
+"Clock",
+"Coffee",
+"Computer",
+"Cookie",
+"Cow",
+"Crayon",
+"Cupcake",
+"Dance",
+"Diamond",
+"Doctor",
+"Dog",
+"Dolphin",
+"Donut",
+"Dragon",
+"Duck",
+"Eagle",
+"Elevator",
+"Elephant",
+"Envelope",
+"Eye",
+"Fan",
+"Fence",
+"Fire",
+"Fish",
+"Flamingo",
+"Flower",
+"Forest",
+"Fox",
+"Frog",
+"Fruit salad",
+"Garden",
+"Gift",
+"Giraffe",
+"Glasses",
+"Glove",
+"Gold",
+"Grasshopper",
+"Green",
+"Guitar",
+"Hammer",
+"Hat",
+"Heart",
+"Helicopter",
+"Hippo",
+"Home",
+"Horse",
+"Hospital",
+"Hot air balloon",
+"Hot dog",
+"Ice cream",
+"Island",
+"Jacket",
+"Jellyfish",
+"Jet ski",
+"Juice",
+"Kangaroo",
+"Key",
+"Kite",
+"Knife",
+"Ladybug",
+"Lake",
+"Lamp",
+"Laptop",
+"Leaf",
+"Lemon",
+"Lion",
+"Lizard",
+"Lollipop",
+"Lunch",
+"Magnet",
+"Mailbox",
+"Map",
+"Marker",
+"Melon",
+"Microphone",
+"Monkey",
+"Moon",
+"Motorcycle",
+"Mountain",
+"Mouse",
+"Mushroom",
+"Necklace",
+"Nest",
+"Newspaper",
+"Night",
+"Noodle",
+"Nose",
+"Ocean",
+"Octopus",
+"Orange",
+"Owl",
+"Paintbrush",
+"Pancake",
+"Panda",
+"Paper",
+"Parrot",
+"Peach",
+"Penguin",
+"Piano",
+"Pie",
+"Pig",
+"Pigeon",
+"Pillow",
+"Pizza",
+"Plane",
+"Plant",
+"Plate",
+"Pumpkin",
+"Purse",
+"Queen",
+"Rabbit",
+"Rainbow",
+"Rat",
+"Robot",
+"Rock",
+"Rose",
+"Sailboat",
+"Sand",
+"Sandwich",
+"Scissors",
+"Seahorse",
+"Seal",
+"Shark",
+"Shirt",
+"Shoe",
+"Singing",
+"Sister",
+"Skateboard",
+"Ski",
+"Snake",
+"Snow",
+"Soccer",
+"Socks",
+"Soda",
+"Song",
+"Soup",
+"Space",
+"Spider",
+"Spoon",
+"Spring",
+"Star",
+"Strawberry",
+"Summer",
+"Sun",
+"Sunglasses",
+"Surfing",
+"Swan",
+"Sweater",
+"Swimming",
+"Table",
+"Tail",
+"Teacher",
+"Telephone",
+"Television",
+"Tennis",
+"Thermometer",
+"Tiger",
+"Toast",
+"Toe",
+"Tomato",
+"Toolbox",
+"Toothbrush",
+"Toothpaste",
+"Tornado",
+"Train",
+"Tree",
+"Truck",
+"Turtle",
+"Umbrella",
+"Unicorn",
+"Vacuum",
+"Vegetable",
+"Violin",
+"Watermelon",
+"Whale",
+"Winter",
+"Wolf",
+"Wood",
+"Worm",
+"X-ray",
+"Yacht",
+"Yellow",
+"Yo-yo",
+"Zebra",
+"Zipper",
+"Zoo",
+"Airport",
+"Alphabet",
+"Baby bottle",
+"Backpack",
+"Balloon",
+"Baseball",
+"Basketball",
+"Beach",
+"Bee",
+"Birthday",
+"Biscuit",
+"Boots",
+"Bow",
+"Bowtie",
+"Box",
+"Bubbles",
+"Butterfly",
+"Cactus",
+"Camera",
+"Campfire",
+"Candle",
+"Candy",
+"Carrot cake",
+"Castle",
+"Caterpillar",
+"Cherry",
+"Chick",
+"Chimney",
+"Christmas",
+"Cloud",
+"Clown",
+"Coffee cup",
+"Coin",
+"Comet",
+"Cook",
+"Corn",
+"Cowboy",
+"Crab",
+"Cruise",
+"Curtains",
+"Desk",
+"Diamond",
+"Dinosaur",
+"Doctor",
+"Dolphin",
+"Donut",
+"Door",
+"Dress",
+"Drum",
+"Duck",
+"Eagle",
+"Earrings",
+"Easter",
+"Elephant",
+"Envelope",
+"Eraser",
+"Eyeglasses",
+"Fairy",
+"Feather",
+"Fire",
+"Fish",
+"Flower",
+"Fly",
+"Football",
+"Fountain",
+"Frog",
+"Fruit",
+"Garbage truck",
+"Gingerbread",
+"Glasses",
+"Glove",
+"Gorilla",
+"Grass",
+"Guitar",
+"Hamburger",
+"Hand",
+"Harp",
+"Hat",
+"Helicopter",
+"Horse",
+"Hotdog",
+"Ice cream",
+"Igloo"];
 
   const colors = Array(9).fill('red')
       .concat(Array(9).fill('blue'))
