--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 font-family: 'Muli', sans-serif;
                 background-repeat: no-repeat;
                 background-size: 100%;
+
             }
 
             h1 {
@@ -33,7 +34,8 @@
             }
 
             #game-board {
-                background-color: rgba(255,255,255, 0.75);
+  	background-color: transparent;
+
             }
 
             #game-nav {
