--- a/index.html
+++ b/index.html
@@ -98,23 +98,49 @@
             }
 
             .card {
-                background: #E2DCCD;
-                border: 2px solid gray;
- 				border-radius: 5px;
-      			line-height: 70px;
-        		color: #2B2D2F;
- 				margin: 7px;
-        		align-items: center;
-        		box-sizing: border-box;
-        		font-size: 18px;
-       			 transition: box-shadow 0.3s ease-in-out;
-       			 box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+		background: linear-gradient(to bottom, #f6f6f6, #e0e0e0);
+  		border: 2px solid #aaa;
+  		border-radius: 20px;
+ 		border-radius: 5px;
+      		line-height: 70px;
+  		color: #444;
+ 		margin: 7px;
+        	align-items: center;
+        	box-sizing: border-box;
+        	font-size: 18px;
+  		font-weight: bold;
+       		transition: box-shadow 0.3s ease-in-out;
+       		box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
                 margin: 7px;
                 align-items: center;
                 box-sizing: border-box;
                 font-size: 16px;
-        background: linear-gradient(to bottom, #cecfc8, #838572);
-            }
+  		text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.5);
+  		text-transform: uppercase;
+		padding: 10px;
+  		position: relative;
+  		transform-style: preserve-3d;
+  		transition: all 0.5s ease;
+            
+}
+
+.card:hover {
+  transform: rotateY(180deg);
+}
+
+.card:before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(45deg, rgba(255,255,255,0.5), rgba(0,0,0,0.1));
+  border-radius: 3px;
+  pointer-events: none;
+  z-index: -1;
+}
 
       .redCard {
         background-color: #ED2939;
