--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             }
 
             #game-view {
-                width: 825px;
+             	width: 1200px;
+ 		height: 675px;
                 text-align: center;
                 box-sizing: border-box;
                 justify-content: center;
